<resources>
    <string name="app_name">Best Band</string>
    <string name="bands_name">Bands Name</string>
    <string name="genre">Genre</string>
    <string name="years_active">Years Active</string>
    <string name="information">Information</string>
    <string name="band_name_detail">Band Name</string>
    <string name="genre_detail">Genre</string>
    <string name="year_active_detail">Year Active</string>
    <string name="member_detail">Member</string>
    <string name="information_band">Information Band</string>
    <string name="about_me">About Me</string>
    <string name="favorite">false</string>
</resources>