<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:src="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_item_photo"
        android:layout_toRightOf="@id/img_item_photo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:text="@string/bands_name"
            android:textColor="@color/white"/>


        <TextView
            android:id="@+id/tv_item_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginBottom="-2dp"
            android:textSize="14sp"
            tools:text="@string/genre"
            android:textColor="@color/font"/>

        <TextView
            android:id="@+id/tv_item_years_active"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            tools:text="@string/years_active"
            android:textColor="@color/font"/>

        <View
            android:layout_width="match_parent"
            android:visibility="visible"
            android:layout_height="1.5dp"
            android:background="@color/font"/>
    </LinearLayout>
</RelativeLayout>