<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />

            <CheckBox
                android:id="@+id/band_favorite"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_gravity="bottom|end"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/favorite_selector"
                android:button="@null" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/title"
                android:src="@drawable/logo_acdc" />

            <TextView
                android:id="@+id/band_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/logo"
                android:layout_toRightOf="@id/logo"
                android:textSize="30sp"
                android:text="@string/band_name_detail"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="18dp"
            android:textAlignment="center"
            android:layout_marginRight="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="Genre              : "
                    android:textSize="16sp"
                    android:textColor="@color/font" />

                <TextView
                    android:id="@+id/band_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/genre_detail"
                    android:textColor="@color/font"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="Year Active    : "
                    android:textColor="@color/font"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/band_year_active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/year_active_detail"
                    android:textColor="@color/font"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="Members       : "
                    android:textColor="@color/font"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/band_member"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/member_detail"
                    android:textColor="@color/font"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:text="@string/information"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:textSize="25sp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:background="@drawable/bg_rounded"/>

        <TextView
            android:id="@+id/band_information"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:textColor="@color/font"
            android:text="@string/information_band"
            android:textAlignment="center"
            android:lineHeight="25dp"
            android:letterSpacing="-0.001"
            android:layout_marginTop="-5dp"
            android:padding="20dp"/>
    </LinearLayout>
</ScrollView>